--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-Beyond basic 3 qubit code.ipynb
+Beyond Basic 3 Qubit Code.ipynb
 threequbitcode.py
 Quantum Errors.ipynb
 relaxation3qubitcode.py
