--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-Beyond Basic 3 Qubit Code.ipynb
-threequbitcode.py
+3qubit_code/Beyond Basic 3 Qubit Code.ipynb
+3qubit_code/threequbitcode.py
 Quantum Errors.ipynb
+
 
