--- a/.gitignore
+++ b/.gitignore
@@ -164,7 +164,6 @@ cython_debug/
 3qubit_code/Full 3 Qubit Code.ipynb
 Bosonic Modes/Kitten Code.ipynb
 Quantum Errors.ipynb
-
-
+Surface_Code/Distance 3 Surface Code.ipynb
 
 
